--- a/src/styles/SaveBtn.module.css
+++ b/src/styles/SaveBtn.module.css
@@ -27,7 +27,7 @@
   font-weight: 400;
   color: #de2c28;
   background-color: white;
-  height: 40px;
+  /* height: 40px; */
   width: 110px;
   z-index: 1;
 }
